# max-min-criterion

./: .gitignore  CMakeLists.txt  Makefile  functions.c  main.c  prototypes.h  runTests.sh  test.c
